<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm Clock</string>
    <string name="hello_world">Hello world!</string>
    <string name="time_default">00 : 00</string>

    <!--alarm_screen-->
    <string name="alarm">Alarm!</string>
    <string name="default1">default</string>
    <string name="dismiss">Dismiss</string>
    <string name="alarm_name">Alarm name</string>

    <!--details-->
    <string name="details_alarm_name">Alarm Name</string>
    <string name="details_repeat_weekly">Repeat Weekly</string>
    <string name="details_sunday">Sunday</string>
    <string name="details_monday">Monday</string>
    <string name="details_tuesday">Tuesday</string>
    <string name="details_wednesday">Wednesday</string>
    <string name="details_thursday">Thursday</string>
    <string name="details_friday">Friday</string>
    <string name="details_saturday">Saturday</string>
    <string name="details_alarm_tone">Alarm Tone</string>
    <string name="details_alarm_tone_default">Select an alarm tone</string>
    <!--main-->

    <!--list-->

    <!--list_item-->


    <string name="title_word_clock">Word Clock</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="title_countdown">Timer</string>
    <string name="title_profile">Profile</string>


    <string name="cd_word_clock">Word Clock</string>
    <string name="cd_group">Alarm</string>
    <string name="cd_stopwatch">Stopwatch</string>
    <string name="cd_timer">Timer</string>
    <string name="cd_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_convert">%02d : %02d</string>
    <string name="textview_count_time">00:00:00</string>
    <string name="time_percent">.00</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="lap">Lap</string>
    <string name="continue_time">Continue</string>
    <string name="reset">Reset</string>


    <string name="action_settings">Settings</string>
    <string name="current_time">Clock</string>
    <string name="schedule_time">Timer</string>
    <string name="count_time">Stopwatch</string>

    <string name="colon">:</string>
    <string name="two_zero">00</string>

    <string name="ok">OK</string>
</resources>
