<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:isScrollContainer="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TimePicker
                    android:layout_gravity="center"
                    android:timePickerMode="spinner"
                    android:id="@+id/alarm_details_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/alarm_details_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="16dp"
                    android:inputType="textAutoComplete"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:ems="10"
                    android:hint="@string/details_alarm_name" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Divider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_weekly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_repeat_weekly" />

                <View
                    android:id="@+id/divider1"
                    style="@style/Divider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_sunday" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_monday" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_tuesday" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_wednesday" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_thursday" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_friday" />

                <com.example.alarmdemo.CustomSwitch
                    android:id="@+id/alarm_details_repeat_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/details_saturday" />

                <View
                    android:id="@+id/divider4"
                    style="@style/Divider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />

                <LinearLayout
                    android:id="@+id/alarm_ringtone_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/view_touch_selector"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/alarm_label_tone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/details_alarm_tone"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/alarm_label_tone_selection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:text="@string/details_alarm_tone_default"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    style="@style/Divider"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp" />
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>